--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
     //ViewModel
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    //firebase job dispatcher
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 
 }
