--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
         maven {
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
+            url 'https://maven.google.com'
         }
     }
     dependencies {
